# PartUV

./: .gitignore  CMakeLists.txt  CMakeLists_main.txt  README.md  bindings.cpp  build.bat  pyproject.toml  requirements.txt  run.bat  run.py  setup.bat
demo/: partuv_demo.py
demo/benchmark/: benchmark.sh  benchmark_dataset.py  eval_generate_report.py  utils.py
pack/: eval_charts.py  pack.py  pack_multiAtlas.py  uv_distortion.py
partuv/: __init__.py  preprocess.py
preprocess_utils/: manifold.py
preprocess_utils/partfield_official/: run_PF.py
src/: AgglomerativeClustering.cpp  Component.cpp  Component.h  Config.h  UnwrapMerge.cpp  cusimp.cu  pipeline.cpp  pipeline.h
src/triangle_intersection/: triangleHelper.cpp
